namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ngci
  labels:  {istio-injection :  enabled}
