deployments.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: web-gateway
  namespace: ngci
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: web-gateway
    spec:
      containers:
      - env:
        name: web-gateway
        image: ngci/web-gateway:0.1
        #imagePullPolicy: Never
        ports:
          - containerPort: 8080

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: system-model
  namespace: ngci
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: system-model
    spec:
      containers:
      - env:
        name: system-model
        image: ngci/system-model:0.1
        #imagePullPolicy: Never
        ports:
          - containerPort: 9080
