ngci-endpoints.yml
apiVersion: v1
kind: Endpoints
metadata:
  name: awx-external-service
  namespace: ngci
subsets:
  - addresses:
      - ip: 10.239.133.82
    ports:
      - port: 80
