services.yml
---
apiVersion: v1
kind: Service
metadata:
  name: web-gateway-service
  labels:
    app: web-gateway-service
  namespace: ngci
spec:
  selector:
    app: web-gateway
  ports:
    - protocol: "TCP"
      port: 8080
      targetPort: 8080
      nodePort: 30009
      name: http
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: system-model-service
  labels:
    app: system-model-service
  namespace: ngci
spec:
  selector:
    app: system-model
  ports:
    - protocol: "TCP"
      port: 8080
      targetPort: 9080
      name: http
