ingress-rules-istio.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ncgi-ingress
  namespace: ngci
  annotations:
    kubernetes.io/ingress.class: istio
spec:
  rules:
  - http:
      paths:
      - path: /data
        backend:
          serviceName: web-gateway-service
          servicePort: 8080
