ngci-service-entry.yml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: aws-external
spec:
  hosts:
  - 10.239.133.82
  ports:
  - number: 80
    name: http
    protocol: HTTP
